--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a {
 
 a:hover {
     text-decoration: underline;
-    color: #fff; /* Cor branca para melhor visibilidade */
+    color: #fff; 
 }
 
 a:hover {
