--- a/style.css
+++ b/style.css
@@ -64,12 +64,12 @@ a {
 }
 
 a:hover {
-    text-decoration: underline;
-    color: #ffccdd; 
+    color: #ff7eb3; 
     background-color: rgba(255, 255, 255, 0.2); 
-    padding: 2px 5px;
+    padding: 3px;
     border-radius: 5px;
 }
+
 
 
 /* Rodapé */
