--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ header {
     padding: 20px;
 }
 
+.name {
+    color: #ff69b4; 
+    font-weight: bold;
+}
+
+
 /* Foto de perfil */
 .profile-photo {
     width: 150px;
