--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
 }
 
 .name {
-    color: #ff1493; 
+    color: #e60073; 
     font-weight: bold;
     font-size: 24px; 
     text-align: center; 
