--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
 }
 
 .name {
-    color: #ff0066; 
+    color: #ff007f; 
     font-weight: bold;
     font-size: 26px; 
     text-align: center; 
