--- a/style.css
+++ b/style.css
@@ -119,3 +119,22 @@ footer {
     color: white;
     margin-top: 20px;
 }
+
+.formacao {
+    text-align: center;
+    margin: 20px auto;
+    background: #3a3a3a;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    width: 60%; /* Ajusta a largura para melhor alinhamento */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formacao p {
+    font-size: 18px;
+    color: #fff;
+}
+
