--- a/style.css
+++ b/style.css
@@ -137,3 +137,20 @@ footer {
     color: #fff;
 }
 
+
+td:first-child i {
+    display: none;
+}
+
+td:nth-child(2) {
+    text-align: center;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+/* Centralizar o texto da primeira coluna */
+td:first-child {
+    text-align: center;
+}
+
+
