--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,38 @@ h2 {
     text-shadow: 0px 0px 8px #F8BBD0;
 }
 
+/* Ajuste no e-mail */
+.contact-list li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    background-color: #3A3A3A;
+    border-radius: 8px;
+    transition: 0.3s;
+}
+
+.contact-list li:hover {
+    background-color: #D81B60;
+    transform: scale(1.05);
+}
+
+/* Garantindo que os links sejam clicáveis */
+.contact-list a {
+    color: #F8BBD0;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    width: 100%; /* Garante que o link ocupe toda a área do botão */
+    text-align: center;
+}
+
+.contact-list a:hover {
+    color: #FFFFFF;
+    text-shadow: none;
+}
+
+
 /* Seção Formação */
 .formacao-container {
     display: flex;
